added fibonacchi sequence code

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>JS Practice</h1>
 </body>
 
-<script src="JS/ninetyNineBottleSong.js"></script>
+//you have to add manually the js file which you want to use
+
+<script src="JS/fibonacchiGenerator.js"></script>
 </html>
